# rucksack

./: .gitignore  CMakeLists.txt  README.md  WorkspaceCMakeLists.txt
.github/workflows/: ccpp.yml
examples/: read.cpp  write.cpp
include/rucksack/: datastructures.h  rucksack.h
src/: rucksack.cpp
tools/: rucksack.cpp
